# remotifex

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.dev.yml  docker-compose.yml  install.sh  uninstall.sh  update.sh  updater-watch.sh
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/db/: mongodb.py
backend/app/models/: chat.py  project.py  settings.py  user.py
backend/app/routers/: auth.py  chat.py  files.py  projects.py  settings.py  websocket.py
backend/app/schemas/: chat.py  project.py  settings.py  user.py
backend/app/utils/: security.py
caddy/: Caddyfile
frontend/: Dockerfile  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: app.vue
frontend/app/assets/css/: main.css
frontend/app/components/app/: Header.vue  MobileNav.vue  Sidebar.vue
frontend/app/components/chat/: ChatInput.vue  ChatMessage.vue  ChatPanel.vue  StreamingCursor.vue  ToolCallBlock.vue
frontend/app/components/editor/: EditorTabs.vue  FileTree.vue  FileTreeNode.vue  FileViewer.vue
frontend/app/components/ui/: UiBadge.vue  UiButton.vue  (+5 more)
frontend/app/composables/: useToast.ts  useWebSocket.ts
frontend/app/layouts/: auth.vue  default.vue
frontend/app/middleware/: auth.global.ts
frontend/app/pages/: index.vue  login.vue  setup.vue
frontend/app/stores/: auth.ts  chat.ts  projects.ts
frontend/app/types/: index.ts
frontend/app/utils/: api.ts
frontend/assets/css/: main.css
worker/: Dockerfile  pyproject.toml
worker/app/: claude_runner.py  main.py  stream_parser.py
(+8 files in other folders)
